--- a/projects/wip/hipstring/beta/index.html
+++ b/projects/wip/hipstring/beta/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
@@ -21,7 +24,7 @@
       </div>
     </div>
     <div class="main-container">
-    <div class="soundplaer">
+    <div class="soundplayer">
       <script src="http://connect.soundcloud.com/sdk.js"></script>
       <script>
 	SC.initialize({
