--- a/projects/wip/hipstring/beta/index.html
+++ b/projects/wip/hipstring/beta/index.html
@@ -137,6 +137,8 @@ ondragover="allowDrop(event)">
       </ul>
       <ul id="positive" class="assigned span4" ondrop="dropPositive(event)"
 ondragover="allowDrop(event)"></ul>
-    </div></div>
+    </div>
+    <div class="buttonArea">
+    <button id="submitBtn" class="btn btn-primary">Lock In</btn></div></div>
   </body>
 </html>
