--- a/projects/wip/hipstring/beta/index.html
+++ b/projects/wip/hipstring/beta/index.html
@@ -18,7 +18,7 @@
 	  <li><a href="#">Create</a></li>
 	  <li><a href="#">Explore</a></li>
 	</ul>
-	<ul class="nav right-nav">
+	<ul class="nav pull-right">
 	  <li><a id="login" href="#">Login/Register</a></li>
 	</ul>
       </div>
