--- a/projects/wip/hipstring/beta/index.html
+++ b/projects/wip/hipstring/beta/index.html
@@ -132,7 +132,8 @@ ondragover="allowDrop(event)">
 	<li id="tone" class="attribute" draggable="true"
 	    ondragstart="drag(event)" ondragend="dragEnd(event)">
 	  <p class="attName" onclick="showClickVote('tone')">Tone</p>
-	  <p id="toneStats" class="attStats">
+	  <p id="toneStats" class="attStats"
+	     onclick="showClickVote2('tone')">
 	    <i class="icon-thumbs-up"></i> <span>5</span>
 	    <i class="icon-thumbs-down"></i> <span>4</span>
 	  </p>
