--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -59,10 +59,9 @@
 	    data-toggle="tooltip" rel="tooltip" title='The simultaneous sounds that create chords or richer sound. The texture of the music, and how all the sounds interact "vertically."'>
 	  <p class="attName">Harmony</p>
 	</li>
-	<li id="rhythm" class="attribute" draggable="true"
-	    ondragstart="drag(event)" ondragend="dragEnd(event)"
+	<li id="rhythm" class="attribute"
 	    data-toggle="tooltip" rel="tooltip" title='The pattern or placement of the sounds in time. Also, the beat and pulse of the music.'>
-	  <p class="attName" onclick="showClickVote('rhythm')">Rhythm</p>
+	  <p class="attName">Rhythm</p>
 	</li>
 	<li id="tempo" class="attribute"
 	    data-toggle="tooltip" rel="tooltip" title='The speed or pace of the music. It can be consistent or change throughout the music.'>
