--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -10,7 +10,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div class="navbar navbar-fixed-top navbar-inverse">
+    <div class="navbar navbar-static-top navbar-inverse">
       <div class="navbar-inner">
 	<a class="brand" href="/">Hipstring.me</a>
 	<ul class="nav">
