--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-responsive.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
@@ -16,7 +17,7 @@
 	<ul class="nav">
 	  <li><a href="#">Home</a></li>
 	</ul>
-	<ul class="nav pull-right">
+	<ul class="nav pull-right hidden-phone">
 	  <li><div class="input-append">
       <input type="text" name="entry" placeholder="soundcloud.com/artist/track" id="entry" onclick="javascript:this.focus();this.select();">
       <button class="btn" type="submit" value="Enter">Enter</button>
