--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -16,7 +16,7 @@
       <div class="navbar-inner">
 	<a class="brand" href="/">Hipstring.me</a>
 	<ul class="nav">
-	  <li><a href="#">Home</a></li>
+	  <li><a href="#">Main</a></li>
 	</ul>
 	<ul class="nav pull-right hidden-phone">
 	  <li><div class="input-append">
