--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -13,7 +13,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div class="navbar navbar-static-top navbar-inverse">
+    <div class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
 	<a class="brand" href="/">Hipstring.me</a>
 	<ul class="nav">
@@ -111,6 +111,36 @@
       </a>
     </div>
     </div>
+    </div>
+    </div>
+    <div class="more-tracks">
+      <h2>More Tracks</h2>
+      <div class="tracks-container">
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+      </div>
     </div>
     </div>
   </body>
