--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -140,6 +140,18 @@
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
 	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	</div>
       </div>
     </div>
     </div>
