--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -55,6 +55,9 @@
 	Share
       </a>
     </div>
+      <div class="stats">
+	<p>0 listeners have provided this artist with feedback. Be the first.</p>
+      </div>
       <div class="voting">
 	<a class="selected" id="positive">What's Good</a>
 	<a id="negative">What Needs Work</a>
