titles and artists

--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -122,39 +122,63 @@
       <div class="tracks-container">
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
 	</div>
       </div>
     </div>
