adding in more tracks user info and made you like this clickable by moving it to p

--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -120,7 +120,34 @@
     <div class="more-tracks">
       <h2>More Tracks</h2>
       <div class="tracks-container">
+	<div class="track unheard">
+		<div class="cover-container">
+		  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
 	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
+	<div class="track">
+	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
+	<div class="track unheard">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
@@ -145,32 +172,7 @@
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
 	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track">
+	<div class="track unheard">
 	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
