show how many elements rated

--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -127,58 +127,80 @@
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
 	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	<div class="track ur1">
+		<div class="cover-container">
+		  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
 	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	<div class="track ur0">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
 	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	<div class="track ur7">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
 	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track unheard">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
-	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	<div class="track ur0">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track unheard">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
 	</div>
-	<div class="track">
-	  <img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+	<div class="track ur9">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
+	<div class="track ur5">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
+	<div class="track ur2">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
+	<div class="track ur0">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
+	<div class="track unheard">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
+	  <span class="title">A Cool Track</span>
+	  <span class="artist">A Cool Singer</span>
+	</div>
+	<div class="track ur3">
+		<div class="cover-container">
+			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
+		</div>
 	  <span class="title">A Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
 	</div>
