tooltip for more tracks

--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -118,7 +118,9 @@
     </div>
     </div>
     <div class="more-tracks">
-      <h2>More Tracks</h2>
+      <h2>More Tracks 
+      	<i class="icon-question-sign" data-toggle="tooltip" rel="tooltip" title='The numbers by each track show how many of its musical attributes you have rated.'></i>
+      </h2>
       <div class="tracks-container">
 	<div class="track unheard">
 		<div class="cover-container">
