--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -119,7 +119,7 @@
     </div>
     <div class="more-tracks">
       <h2>More Tracks 
-      	<i class="icon-question-sign" data-toggle="tooltip" rel="tooltip" title='The numbers by each track show how many of its musical attributes you have rated.'></i>
+      	<i class="icon-question-sign" data-toggle="tooltip" rel="tooltip" title='The numbers by each track show how many of its musical attributes you have rated. Not your ratings? You may be sharing an IP address. Log in for a more personalized experience.'></i>
       </h2>
       <div class="tracks-container">
 	<div class="track unheard">
@@ -140,8 +140,8 @@
 		<div class="cover-container">
 			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
 		</div>
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
+	  <span class="title">Shakira, Shakira</span>
+	  <span class="artist">That Guy That Lives In The Unit Next Door</span>
 	</div>
 	<div class="track ur7">
 		<div class="cover-container">
@@ -168,8 +168,8 @@
 		<div class="cover-container">
 			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
 		</div>
-	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
+	  <span class="title">No Surprises</span>
+	  <span class="artist">Radiohead</span>
 	</div>
 	<div class="track ur5">
 		<div class="cover-container">
@@ -189,7 +189,7 @@
 		<div class="cover-container">
 			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
 		</div>
-	  <span class="title">A Cool Track</span>
+	  <span class="title">A Really Really Cool Track</span>
 	  <span class="artist">A Cool Singer</span>
 	</div>
 	<div class="track unheard">
@@ -197,7 +197,7 @@
 			<img src="https://i2.sndcdn.com/artworks-000053543243-qfsanr-t500x500.jpg?5ffe3cd">
 		</div>
 	  <span class="title">A Cool Track</span>
-	  <span class="artist">A Cool Singer</span>
+	  <span class="artist">A Cool Singer With a Really Long Name</span>
 	</div>
 	<div class="track ur3">
 		<div class="cover-container">
