change navbar phone items

--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -18,10 +18,10 @@
       <div class="navbar-inner">
 	<a class="brand" href="/">Hipstring.me</a>
 	<ul class="nav">
-	  <li><a href="#">Home</a></li>
+	  <li class="hidden-phone"><a href="#">Home</a></li>
 	</ul>
-	<ul class="nav pull-right hidden-phone">
-	  <li><div class="input-append">
+	<ul class="nav pull-right">
+	  <li class="hidden-phone"><div class="input-append">
       <input type="text" name="entry" placeholder="soundcloud.com/artist/track" id="entry" onclick="javascript:this.focus();this.select();">
       <button class="btn" type="submit" value="Enter">Enter</button>
     </div></li>
