--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -26,7 +26,7 @@
       <input type="text" name="entry" placeholder="soundcloud.com/artist/track" id="entry" onclick="javascript:this.focus();this.select();">
       <button class="btn" type="submit" value="Enter">Enter</button>
     </div></li>
-	  <li><a id="login" href="#">Login/Register</a></li>
+	  <li><a id="login" href="#" data-toggle="modal" data-target="#loginModal">Login/Register</a></li>
 	</ul>
       </div>
     </div>
@@ -240,6 +240,21 @@
       </div>
     </div>
     </div>
+
+<div id="loginModal" class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>We're Not Quite Ready For You.</h3>
+  </div>
+  <div class="modal-body">
+    <p>Enter your email to be the first to know when you can join!</p>
+    <input type="email" placeholder="your@email.com">
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal">Never mind</a>
+    <a href="#" class="btn btn-primary">Submit</a>
+  </div>
+</div>
     <!-- begin olark code -->
 <script data-cfasync="false" type='text/javascript'>/*<![CDATA[*/window.olark||(function(c){var f=window,d=document,l=f.location.protocol=="https:"?"https:":"http:",z=c.name,r="load";var nt=function(){
 f[z]=function(){
