trying twitter share

--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -52,7 +52,7 @@
 	<img src="img/facebook.png">
 	Share
       </a>
-      <a class="twitter">
+      <a href="https://twitter.com/share" class="twitter">
 	<img src="img/twitter.png">
 	Share
       </a>
