--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -47,12 +47,12 @@
       </script>
     </div>
     <div class="options-container">
-          <div class="sharing">
+	  <div class="sharing">
       <a class="facebook">
 	<img src="img/facebook.png">
 	Share
       </a>
-      <a href="https://twitter.com/share" class="twitter">
+      <a class="twitter">
 	<img src="img/twitter.png">
 	Share
       </a>
