--- a/projects/wip/hipstring/2.0/index.html
+++ b/projects/wip/hipstring/2.0/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="image_src" href="https://i2.sndcdn.com/avatars-000028327261-9y88p6-t500x500.jpg?5ffe3cd">
+    <title>Gripped by ericrav</title>
+    <link rel="image_src" href="https://i2.sndcdn.com/avatars-000028327261-9y88p6-t500x500.jpg?5ffe3cd" />
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
