--- a/projects/wip/hipstring/3.0/index.html
+++ b/projects/wip/hipstring/3.0/index.html
@@ -46,59 +46,81 @@
           {color: "000066", show_artwork: true},  document.getElementById("putTheWidgetHere"));    
         </script>
       </div>
-
-      <ul class="attributes">
-        <li>
-          <div class="attribute">
-            <h2>Melody</h2>
-            <div class="voting">
-              <div class="vote negative">
-                <span class="glyphicon glyphicon-thumbs-down"></span>
-                <span class="count"></span>
-              </div>
-              <div class="vote positive">
-                <span class="glyphicon glyphicon-thumbs-up"></span>
-                <span class="count"></span>
-              </div>
-            </div>
-            <div class="comment"></div>
-            <div class="stats"></div>
+      <div class="attribute">
+        <h2>Melody</h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
           </div>
-        </li>
-        <li>
-          <div class="attribute">
-            <h2>Harmony</h2>
-            <div class="voting">
-              <div class="vote negative">
-                <span class="glyphicon glyphicon-thumbs-down"></span>
-                <span class="count"></span>
-              </div>
-              <div class="vote positive">
-                <span class="glyphicon glyphicon-thumbs-up"></span>
-                <span class="count"></span>
-              </div>
-            </div>
-            <div class="comment"></div>
-            <div class="stats"></div>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
           </div>
-        </li>
-        <li>
-          <div class="attribute">
-            <h2>Rhythm</h2>
-            <div class="voting">
-              <div class="vote negative">
-                <span class="glyphicon glyphicon-thumbs-down"></span>
-                <span class="count"></span>
-              </div>
-              <div class="vote positive">
-                <span class="glyphicon glyphicon-thumbs-up"></span>
-                <span class="count"></span>
-              </div>
-            </div>
-            <div class="comment"></div>
-            <div class="stats"></div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
+      <div class="attribute">
+        <h2>Harmony</h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
           </div>
-        </li>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
+          </div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
+      <div class="attribute">
+        <h2>Rhythm</h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
+          </div>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
+          </div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
+      <div class="attribute">
+        <h2>Tone</h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
+          </div>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
+          </div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
+      <div class="attribute">
+        <h2>Production</h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
+          </div>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
+          </div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
     </div>
 
   </body>
