fixed some stuff. added cta and aside with transition

--- a/projects/wip/hipstring/3.0/index.html
+++ b/projects/wip/hipstring/3.0/index.html
@@ -32,6 +32,9 @@
       </div>
     </nav>
 
+    <aside class="more-tracks">
+    </aside>
+
     <!-- Main Content -->
     <div class="main-container">
       <div class="soundplayer">
@@ -46,8 +49,12 @@
           {color: "000066", show_artwork: true},  document.getElementById("putTheWidgetHere"));    
         </script>
       </div>
+      <div class="cta">
+        <p>0 people have provided this artist with feedback. Be the first.</p>
+        <p><strong>Break it down: </strong></p>
+      </div>
       <div class="attribute">
-        <h2>Melody</h2>
+        <h2>Melody <span class="glyphicon glyphicon-question-sign"></span></h2>
         <div class="voting">
           <div class="vote negative">
             <span class="glyphicon glyphicon-thumbs-down"></span>
@@ -62,7 +69,7 @@
         <div class="stats"></div>
       </div>
       <div class="attribute">
-        <h2>Harmony</h2>
+        <h2>Harmony <span class="glyphicon glyphicon-question-sign"></span></h2>
         <div class="voting">
           <div class="vote negative">
             <span class="glyphicon glyphicon-thumbs-down"></span>
@@ -77,7 +84,7 @@
         <div class="stats"></div>
       </div>
       <div class="attribute">
-        <h2>Rhythm</h2>
+        <h2>Rhythm <span class="glyphicon glyphicon-question-sign"></span></h2>
         <div class="voting">
           <div class="vote negative">
             <span class="glyphicon glyphicon-thumbs-down"></span>
@@ -92,7 +99,7 @@
         <div class="stats"></div>
       </div>
       <div class="attribute">
-        <h2>Tone</h2>
+        <h2>Tone <span class="glyphicon glyphicon-question-sign"></span></h2>
         <div class="voting">
           <div class="vote negative">
             <span class="glyphicon glyphicon-thumbs-down"></span>
@@ -107,7 +114,7 @@
         <div class="stats"></div>
       </div>
       <div class="attribute">
-        <h2>Production</h2>
+        <h2>Production <span class="glyphicon glyphicon-question-sign"></span></h2>
         <div class="voting">
           <div class="vote negative">
             <span class="glyphicon glyphicon-thumbs-down"></span>
