--- a/projects/wip/hipstring/3.0/index.html
+++ b/projects/wip/hipstring/3.0/index.html
@@ -129,6 +129,81 @@
         <div class="comment"></div>
         <div class="stats"></div>
       </div>
+      <div class="attribute">
+        <h2>Originality <span class="glyphicon glyphicon-question-sign"></span></h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
+          </div>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
+          </div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
+      <div class="attribute">
+        <h2>Style <span class="glyphicon glyphicon-question-sign"></span></h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
+          </div>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
+          </div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
+      <div class="attribute">
+        <h2>Tempo <span class="glyphicon glyphicon-question-sign"></span></h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
+          </div>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
+          </div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
+      <div class="attribute">
+        <h2>Instrumentation <span class="glyphicon glyphicon-question-sign"></span></h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
+          </div>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
+          </div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
+      <div class="attribute">
+        <h2>Dynamics <span class="glyphicon glyphicon-question-sign"></span></h2>
+        <div class="voting">
+          <div class="vote negative">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            <span class="count"></span>
+          </div>
+          <div class="vote positive">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            <span class="count"></span>
+          </div>
+        </div>
+        <div class="comment"></div>
+        <div class="stats"></div>
+      </div>
     </div>
 
   </body>
